--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools>=50", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project.dependencies]
+numpy = {}
+
 [tool.black]
 line-length = 88
 
