--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=50", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project.dependencies]
-numpy = {}
+pandas = {}
 
 [tool.black]
 line-length = 88
