--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,9 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+py_modules = midnight
 package_dir =
-    = src
+    =src
 packages = find:
 python_requires = >=3.7
 install_requires =
@@ -24,3 +25,4 @@ install_requires =
 
 [options.packages.find]
 where=src
+include = *
