--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ packages = find:
 python_requires = >=3.7
 install_requires =
     pandas
+    seaborn
 
 [options.packages.find]
 where=src
-include = *
